footer, cross, tick

--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
         <table id="leftHeader"></table>
     <table id="cayleyTable"></table>
   </div>
-
+    <div class="footer">
+      <p>Created by: <b>Arpit </b> <br></p>
+      <a href="https://github.com/ArpitRathore2020">
+      Click here  
+    </a>
+    to fork/clone source code from my GITHUB page
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
