--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <option value="Division">Division</option>
         <option value="Addition modulo">Addition modulo</option>
         <option value="Multiplication modulo">Multiplication modulo</option>
+        <!-- <option value="type#1">a*b = a+b+ab</option>
+        <option value="type#2">a*b = a+b-ab</option> -->
 
         </p>
       </select>
@@ -43,7 +45,6 @@
 
     </p>
     <p>Seperate set elements by a comma.</p>
-    <hr />
     <center>
     <button onclick="additionModulo()" class="submitButton ">
       Check
@@ -52,34 +53,35 @@
     <hr />
     <div class="outputs" id="closure">
       <img
-        src="https://i.pinimg.com/originals/3b/cb/22/3bcb229529e90012173465598ae42764.jpg"
+        src="https://cdn.pixabay.com/photo/2017/02/01/00/29/lone-star-2028578_640.png"
         alt=""
       />
       <p id="closure_text">Closure</p>
     </div>
     <div class="outputs" id="Commutative">
       <img
-        src="https://i.pinimg.com/originals/3b/cb/22/3bcb229529e90012173465598ae42764.jpg"
+        src="https://cdn.pixabay.com/photo/2017/02/01/00/29/lone-star-2028578_640.png"
         alt=""
       />
       <p id="com_text">Commutative</p>
     </div>
     <div class="outputs" id="Identity">
       <img
-        src="https://i.pinimg.com/originals/3b/cb/22/3bcb229529e90012173465598ae42764.jpg"
+        src="https://cdn.pixabay.com/photo/2017/02/01/00/29/lone-star-2028578_640.png"
         alt="Identity"
       />
       <p id="identity_text">Existence of identity element</p>
     </div>
-    <!-- <div class="outputs" id="inverse">
+    <div class="outputs" id="inverse">
       <img
-        src="https://i.pinimg.com/originals/3b/cb/22/3bcb229529e90012173465598ae42764.jpg"
+        src="https://cdn.pixabay.com/photo/2017/02/01/00/29/lone-star-2028578_640.png"
         alt=""
       />
       <p id="inverse_text">Existence of all inverse elements</p>
-    </div> -->
+    </div>
     <hr>
-      
+    <div class="hide">
+      <h2>Cayley Table</h2>
     <div class="tableart">
       <table id="zip">
         <tr>
@@ -92,6 +94,7 @@
         <table id="leftHeader"></table>
     <table id="cayleyTable"></table>
   </div>
+</div>
     <div class="footer">
       <p>Created by: <b>Arpit </b> <br></p>
       <a href="https://github.com/ArpitRathore2020">
