--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>
       G = <span class="cool_font">{</span>
       <input type="text" name="set" id="set" />
-      <span class="cool_font"> }</span>  is a group or not, where {G,*} is closed under * where * is
+      <span class="cool_font"> }</span>  is a group or not, where {G,*} is a set under operation * where * is
       <select required name="type" id="type">
         <option value="Addition">Addition</option>
         <option value="Multiplication">Multiplication</option>
@@ -80,10 +80,15 @@
       </table>
       <table id="topHeader"></table>    
     </div>
-    <div class="tableart">
+    <div class="tableart bottom">
         <table id="leftHeader"></table>
     <table id="cayleyTable"></table>
   </div>
+  <hr>
+  <h3>Valid Inverses: </h3>
+  <ul id="Inverse_ul">
+  </ul>
+  <hr>
 </div>
     <div class="footer">
       <p>Created by: <b>Arpit </b> <br></p>
@@ -91,7 +96,6 @@
       Click here  
       to fork/clone source code from my GITHUB page 
     </a>
-    
     </div>
     <script src="index.js"></script>
   </body>
