file links adjusted

--- a/html/Matrix_inverse.html
+++ b/html/Matrix_inverse.html
@@ -29,7 +29,7 @@
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
-    <link rel="stylesheet" href="/css/Matrix_inverse.css" />
+    <link rel="stylesheet" href="../css/Matrix_inverse.css" />
     <title>Matrix Inverse</title>
   </head>
   <body>
@@ -69,6 +69,6 @@
         </a>
       </div>
     </div>
-    <script src="/js/matrix_inverse.js"></script>
+    <script src="../js/matrix_inverse.js"></script>
   </body>
 </html>
