--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="math.js" type="text/javascript"></script>
     <title>Group Calculator</title>
     <script
@@ -118,6 +118,6 @@
     </a>
     </div>
   </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
