--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/index.css">
     <script src="math.js" type="text/javascript"></script>
     <title>Group Calculator</title>
     <script
@@ -29,8 +30,16 @@
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2351575211792100"
+     crossorigin="anonymous"></script>
   </head>
   <body>
+    <div id="main">
+    <div id="index">
+      <button class="index-buttons">Check for group</button>
+      <button class="index-buttons">Inverse Element</button>
+      <button class="index-buttons">Dihedral Groups</button>
+    </div>
     <div class="block">
     <h1>Check for Group</h1>
     <p>Find whether the set</p>
@@ -119,5 +128,6 @@
     </div>
   </div>
     <script src="js/app.js"></script>
+  </div>
   </body>
 </html>
